Update Project properties and added new extension method to service collection to allow registering without passing arguments

--- a/WebCommandLine/WebCommandLine.csproj
+++ b/WebCommandLine/WebCommandLine.csproj
@@ -9,6 +9,10 @@
     <AssemblyName>WebCommandLine</AssemblyName>
     <Authors>Nyron Williams</Authors>
     <Description>Web CLI library for aspnet core 2+ applications</Description>
+    <PackageProjectUrl>https://github.com/NyronW/WebCommandLine</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/NyronW/WebCommandLine</RepositoryUrl>
+    <PackageTags>Command Line</PackageTags>
+    <PackageId>WebCommandLine</PackageId>
   </PropertyGroup>
 
   <ItemGroup>
