--- a/WebCommandLine/WebCommandLine.csproj
+++ b/WebCommandLine/WebCommandLine.csproj
@@ -8,11 +8,13 @@
     <GenerateEmbeddedFilesManifest>true</GenerateEmbeddedFilesManifest>
     <AssemblyName>WebCommandLine</AssemblyName>
     <Authors>Nyron Williams</Authors>
-    <Description>Web CLI library for aspnet core 2+ applications</Description>
+    <Description>Web CLI library for aspnet core (.Net 5 +) applications</Description>
     <PackageProjectUrl>https://github.com/NyronW/WebCommandLine</PackageProjectUrl>
     <RepositoryUrl>https://github.com/NyronW/WebCommandLine</RepositoryUrl>
     <PackageTags>Command Line</PackageTags>
     <PackageId>WebCommandLine</PackageId>
+    <Version>1.0.1</Version>
+    <NeutralLanguage>en</NeutralLanguage>
   </PropertyGroup>
 
   <ItemGroup>
