--- a/WebCommandLine.Commands/WebCommandLine.Commands.csproj
+++ b/WebCommandLine.Commands/WebCommandLine.Commands.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentCommandLineParser-netstandard" Version="1.4.3.13" />
+    <PackageReference Include="WebCommandLine.Contracts" Version="1.0.1" />
   </ItemGroup>
 
   <ItemGroup>
