--- a/WebCommandLine.Commands/WebCommandLine.Commands.csproj
+++ b/WebCommandLine.Commands/WebCommandLine.Commands.csproj
@@ -8,12 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="FluentCommandLineParser-netstandard" Version="1.4.3.13" />
-    <!--<PackageReference Include="WebCommandLine.Contracts" Version="1.0.3" />-->
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\WebCommandLine.Contracts\WebCommandLine.Contracts.csproj" />
-    <ProjectReference Include="..\WebCommandLine\WebCommandLine.csproj" />
+    <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="8.0.7" />
+    <PackageReference Include="WebCommandLine.Contracts" Version="2.0.0" />
   </ItemGroup>
 
 </Project>
