--- a/WebCommandLine.Contracts/WebCommandLine.Contracts.csproj
+++ b/WebCommandLine.Contracts/WebCommandLine.Contracts.csproj
@@ -13,9 +13,13 @@
     <RepositoryUrl>https://github.com/NyronW/WebCommandLine</RepositoryUrl>
     <PackageTags>Command Line</PackageTags>
     <PackageId>WebCommandLine.Contracts</PackageId>
-    <Version>1.0.4</Version>
+    <Version>2.0.0</Version>
     <NeutralLanguage>en</NeutralLanguage>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+  </ItemGroup>
 
 </Project>
